<resources>
    <string name="app_name">Account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in">sign in to access your account</string>
    <string name="enter">Enter your email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="full_name">Full name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="by_checking_the_box_you_agree_to_our">By checking the box you agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="image">Description of the image</string>
    <string name="conditions">conditions</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="get_started">Get Started</string>
    <string name="strong_password">Strong password</string>
</resources>