<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="800dp"
    android:background="#FCFCFC"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="321dp"
        android:layout_height="251dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="159dp"
        android:text="@string/get_started"
        android:textColor="#252525"
        android:textSize="36sp" />

    <TextView
        android:layout_width="183dp"
        android:layout_height="17dp"
        android:layout_marginTop="203dp"
        android:layout_marginStart="78dp"
        android:gravity="center"
        android:text="@string/by_creating_a_free_account"
        android:textColor="#252525"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="256dp"
        android:autofillHints="name"
        android:background="@drawable/round"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="14dp"
        android:textColor="#00000080"
        android:textColorHint="#546E7A"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="325dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/round"
        android:hint="@string/valid_email"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColor="#00000080"
        android:textColorHint="#546E7A"
        android:textSize="14sp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="394dp"
        android:layout_marginStart="30dp"
        android:hint="@string/phone_number"
        android:textColorHint="#546E7A"
        android:textColor="#00000080"
        android:background="@drawable/round"
        android:padding="14dp"
        android:textSize="14sp"
        android:inputType="phone"
        android:autofillHints="phone"
        android:id="@+id/phone" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="463dp"
        android:layout_marginStart="30dp"
        android:hint="@string/strong_password"
        android:textColorHint="#546E7A"
        android:textColor="#00000080"
        android:background="@drawable/round"
        android:padding="14dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:id="@+id/password" />
    <CheckBox
        android:id="@+id/remember_me"
        android:src="@drawable/checkbox"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="530dp"
        android:layout_marginStart="44dp"
        android:layout_gravity="center" />
    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="10dp"
        android:layout_marginTop="532dp"
        android:layout_marginStart="60dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="150dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:text="@string/by_checking_the_box_you_agree_to_our"
            android:textSize="9sp"
            android:textColor="#252525" />

        <TextView
            android:id="@+id/terms_text"
            android:layout_width="30dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:text="@string/terms"
            android:textColor="#6C63FF"
            android:textSize="9sp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="18dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:text="@string/and"
            android:textSize="9sp"
            android:textColor="#252525" />

        <TextView
            android:id="@+id/conditions"
            android:layout_width="43dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:text="@string/conditions"
            android:textColor="#6C63FF"
            android:textSize="9sp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="668dp"
        android:layout_marginStart="30dp"
        android:background="#6C63FF"
        android:text="@string/next"
        android:textColor="#FCFCFC"
        android:textSize="20sp"
        android:id="@+id/next_button" />

    <LinearLayout
        android:layout_width="176dp"
        android:layout_height="16dp"
        android:layout_marginTop="743dp"
        android:layout_marginStart="83dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:text="@string/already_a_member"
            android:textSize="13sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/login"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textColor="#6A5ACD"
            android:textSize="13sp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</RelativeLayout>
