<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="800dp"
    android:background="#FCFCFC"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="321dp"
        android:layout_height="251dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="182dp"
        android:layout_height="29dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="80dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="207dp"
        android:layout_height="17dp"
        android:layout_marginTop="213dp"
        android:layout_marginStart="78dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#252525"
        android:textSize="14sp"
         />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="325dp"
        android:layout_marginStart="30dp"
        android:hint="@string/enter"
        android:textColorHint="#A2A2A2"
        android:textColor="#00000080"
        android:background="@drawable/round"
        android:padding="14dp"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:id="@+id/email_input" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="31dp"
        android:hint="@string/password"
        android:textColorHint="#A2A2A2"
        android:textColor="#00000080"
        android:background="@drawable/round"
        android:padding="14dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:id="@+id/password_input" />

    <CheckBox
        android:id="@+id/remember_me"
        android:src="@drawable/checkbox"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="466dp"
        android:layout_marginStart="31dp"
        android:layout_gravity="center" />


    <TextView
        android:layout_width="60dp"
        android:layout_height="10dp"
        android:text="@string/remember_me"
        android:textColor="#252525"
        android:textSize="9sp"
        android:layout_marginTop="467dp"
        android:layout_marginStart="48dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:text="@string/forgot_password"
        android:textColor="#6C63FF"
        android:textStyle="bold"
        android:textSize="9sp"
        android:layout_marginTop="467dp"
        android:layout_marginStart="250dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center" />

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="580dp"
        android:layout_centerHorizontal="true"
        android:background="#6C63FF"
        android:text="@string/next"
        android:textColor="#FCFCFC"
        android:textSize="20sp"
        android:id="@+id/next_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="16dp"
            android:text="@string/new_member"
            android:textSize="10sp"
            android:textColor="#252525" />

        <TextView
            android:id="@+id/register"
            android:layout_width="70dp"
            android:layout_height="16dp"
            android:layout_marginStart="5dp"
            android:text="@string/register_now"
            android:textColor="#6C63FF"
            android:textSize="10sp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</RelativeLayout>
