<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="800dp"
    android:background="#FCFCFC"
    android:textAlignment="viewStart"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/vector"
        android:layout_width="321dp"
        android:layout_height="251dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/picture"
        android:scaleType="center"
        android:src="@drawable/vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="182dp"
        android:layout_height="29dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="#252525"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/access"
        android:layout_width="207dp"
        android:layout_height="17dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="213dp"
        android:gravity="center"
        android:text="@string/sign_in_to_access_your_account"
        android:textColor="#252525"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="325dp"
        android:hint="@string/enter_your_email"
        android:background="#CCCCCC"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="400dp"
        android:hint="@string/password"
        android:background="#CCCCCC"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tForgotPassword"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="467dp"
        android:text="@string/forgot_password"
        android:textColor="#6C63FF"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="17dp"
        android:layout_height="27dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="456dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/RememberMe"
        android:layout_width="60dp"
        android:layout_height="10dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="464dp"
        android:text="@string/remember_me"
        android:textColor="#252525"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="653dp"
        android:background="#6C63FF"
        android:text="@string/next"
        android:textColor="#FCFCFC"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_member"
        android:layout_width="95dp"
        android:layout_height="19dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="726dp"
        android:text="@string/new_member"
        android:textColor="#252525"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Register_now"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:text="@string/register_now"
        android:textColor="#6C63FF"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/new_member"
        app:layout_constraintTop_toTopOf="@id/new_member" />
</androidx.constraintlayout.widget.ConstraintLayout>

